--- a/app/src/main/res/layout/item_draggable_view.xml
+++ b/app/src/main/res/layout/item_draggable_view.xml
@@ -38,7 +38,7 @@
             android:textColor="@android:color/black"
             />
         <TextView
-            android:id="@+id/email"
+            android:id="@+id/desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
